@@ -29,9 +29,12 @@ bool AppDelegate::applicationDidFinishLaunching()
 {
     // initialize director
     auto director = Director::getInstance();
-    auto glview = EGLView::createWithSize("Moon Warriors", Size(480, 720));
+    auto glview = director->getOpenGLView();
+    if(!glview) {
+        auto glview = EGLView::createWithSize("Moon Warriors", Size(480, 720));
+        director->setOpenGLView(glview);
+    }
 
-    director->setOpenGLView(glview);
     director->setProjection(Director::Projection::_2D);
 
     // Set the design resolution
