@@ -29,9 +29,12 @@ bool AppDelegate::applicationDidFinishLaunching()
 {
     // initialize director
     auto director = Director::getInstance();
-    auto glview = EGLView::createWithSize("Watermelon With Me", Size(900,640));
-    director->setOpenGLView(glview);
-    
+    auto glview = director->getOpenGLView();
+    if(!glview) {
+        auto glview = EGLView::createWithSize("Watermelon With Me", Size(900,640));
+        director->setOpenGLView(glview);
+    }
+
     // turn on display FPS
     director->setDisplayStats(true);
     
