@@ -1,3 +1,7 @@
+cocos2d-x-3.0rc0 Feb.??? 2014
+[All]
+     [FIX]          EGLView improvements: renamed to GLView, no longer a singleton, easier to customize
+
 cocos2d-x-3.0beta2 Jan.24 2014
 [All]
      [NEW]          Full screen support for desktop platforms.
